
* Removed old plugin generator (`rails generate plugin`) in favor of `rails plugin new` command. [Guillermo Iguaran]

* Removed old 'config.paths.app.controller' API in favor of 'config.paths["app/controller"]' API. [Guillermo Iguaran]


*Rails 3.1.1

* Add jquery-rails to Gemfile of plugins, test/dummy app needs it. Closes #3091. [Santiago Pastorino]

* `rake assets:precompile` loads the application but does not initialize it.

  To the app developer, this means configuration add in
  config/initializers/* will not be executed.

  Plugins developers need to special case their initializers that are
  meant to be run in the assets group by adding :group => :assets.


*Rails 3.1.0 (August 30, 2011)*

* The default database schema file is written as UTF-8. [Aaron Patterson]

* Generated apps with --dev or --edge flags depend on git versions of
sass-rails and coffee-rails. [Santiago Pastorino]

* Rack::Sendfile middleware is used only if x_sendfile_header is present. [Santiago Pastorino]

* Add JavaScript Runtime name to the Rails Info properties. [DHH]

* Make pp enabled by default in Rails console. [Akira Matsuda]

* Add alias `r` for rails runner. [Jordi Romero]

* Make sprockets/railtie require explicit and add --skip-sprockets to app generator [José Valim]

* Added Rails.groups that automatically handles Rails.env and ENV["RAILS_GROUPS"] [José Valim]

* The new rake task assets:clean removes precompiled assets. [fxn]

* Application and plugin generation run bundle install unless --skip-gemfile or --skip-bundle. [fxn]

* Fixed database tasks for jdbc* adapters #jruby [Rashmi Yadav]

* Template generation for jdbcpostgresql  #jruby [Vishnu Atrai]

* Template generation for jdbcmysql and jdbcsqlite3 #jruby [Arun Agrawal]

* The -j option of the application generator accepts an arbitrary string. If passed "foo",
the gem "foo-rails" is added to the Gemfile, and the application JavaScript manifest